--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,14 +39,22 @@
     border: 1px solid black;
     /* width: 50%; */
     padding: 10px;
+    
+
 }
 
 .search-bar {
     padding-left: 10%;
 }
 
-.youtube, .info {
-    /* border: 1px solid black; */
-    /* padding-left: 10%; */
-    /* height: 200%; */
+#event {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+}
+.info-body {
+    display: flex;
+    flex-direction: column;
+    align-items: normal;
+    text-align: center;
 }
