--- a/assets/styles.css
+++ b/assets/styles.css
@@ -50,7 +50,9 @@
 #event {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content:space-evenly;
+    margin-top: 5px;
 }
 .info-body {
     display: flex;
