--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,7 +6,8 @@
     color: rgb(255, 255, 255);
 }
 body{
-    background-color: $black;
+
+    background-color: black;
     font-family:"Balsamiq Sans", cursive;
     color: var(--clr-neon);
     text-shadow: 0 0 0.125em hsl(0 0% 50% / 0.3), 0 0 0.35em currentColor;
@@ -70,9 +71,8 @@ body{
 
 
 .box-1 {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     /* width: 50%; */
-
     color: var(--clr-neon);
 }
 
@@ -86,6 +86,9 @@ body{
 
 .search-bar {
     padding-left: 10%;
+}
+#search {
+    border-radius: 5px;
 }
 
 #event {
@@ -101,7 +104,16 @@ body{
     align-items: normal;
     text-align: center;
 }
-.footer{
+footer {
+    text-align: center;
+}
+footer ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+footer ul li {
+    list-style: none;
 }
 .box{
 
@@ -113,4 +125,8 @@ img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.hide {
+    display: none;
 }
